# testRP/src/testRP/generated/MoTestRPModelController.cs
@@ -1,0 +1,20 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
+
+// <auto-generated />
+
+using Microsoft.Extensions.Logging;
+
+namespace Microsoft.MyResourceProvider.Service.Controllers
+{
+    /// <summary>
+    /// Controller for user RP operations on the MoTestRPModel resource.
+    /// </summary>
+    public partial class MoTestRPModelController : MoTestRPModelControllerBase
+    {
+        public MoTestRPModelController(ILogger<MoTestRPModelController> logger)
+            : base(logger)
+        {
+        }
+    }
+}
