# testRP/src/testRP/generated/MyResourceProviderServiceRoutes.cs
@@ -1,0 +1,23 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
+
+// <auto-generated />
+
+namespace Microsoft.MyResourceProvider.Service.Controllers
+{
+    public static class MyResourceProviderServiceRoutes
+    {
+        public const string Namespace = "Microsoft.MyResourceProvider";
+
+        public const string MoTestRPModelItem = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}";
+        public const string MoTestRPModelValidateRead = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourceReadValidate";
+        public const string MoTestRPModelBeginRead = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourceReadBegin";
+        public const string MoTestRPModelValidateCreate = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourceCreationValidate";
+        public const string MoTestRPModelEndCreate = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourceCreationCompleted";
+        public const string MoTestRPModelValidatePatch = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourcePatchValidate";
+        public const string MoTestRPModelEndPatch = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourcePatchCompleted";
+        public const string MoTestRPModelValidateDelete = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourceDeletionValidate";
+        public const string MoTestRPModelEndDelete = "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Private.Porter/moTest/{MetadataName}/resourceDeletionCompleted";
+        public const string MoTestRPModelSubscriptionLifeCycleNotification = "/subscriptions/{subscriptionId}/providers/Private.Porter/moTest/subscriptionLifeCycleNotification";
+    }
+}
