# testRP/src/typespec/generated/models/Metadata.cs
@@ -1,47 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-// <auto-generated />
-
-using System;
-using System.Collections.Generic;
-using Newtonsoft.Json;
-using Microsoft.TypeSpec.ProviderHub.Controller;
-
-namespace Microsoft.MyResourceProvider.Service.Models
-{
-    /// <summary>
-    /// A MyResourceProviderProviderHub resource
-    /// </summary>
-    public partial class Metadata : TrackedResource
-    {
-
-        /// <summary>
-        /// Extensibility point - allows changing class properties during construction.
-        /// </summary>
-        partial void OnBeforeInitialize();
-
-        /// <summary>
-        /// Extensibility point - allows changing class properties during construction.
-        /// </summary>
-        partial void OnAfterInitialize();
-
-        /// <summary>
-        /// Initializes a new instance of the Metadata class.
-        /// </summary>
-        public Metadata()
-        {
-            OnBeforeInitialize();
-            OnAfterInitialize();
-        }
-
-        /// <summary>
-        /// The resource-specific properties for this resource.
-        /// </summary>
-        [JsonProperty("properties")]
-        public MetadataProperties Properties { get; set; }
-
-
-
-    }
-}
