# testRP/src/typespec/generated/models/MetadataPropertiesCopyHelper.cs
@@ -1,74 +1,0 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License.
-
-// <auto-generated />
-
-using System;
-using System.ComponentModel;
-using System.Runtime.Serialization;
-using Newtonsoft.Json;
-using Microsoft.TypeSpec.ProviderHub.Controller;
-
-namespace Microsoft.MyResourceProvider.Service.Models
-{
-    /// <summary>
-    /// Helper for merging canonical MetadataProperties models as part of a PUT or PATCH operation
-    /// </summary>
-    public partial class MetadataPropertiesCopyHelper
-    {
-        /// <summary>
-        /// Extensibility point: perform actions before data is copied
-        /// </summary>
-        /// <param name="source">The source MetadataProperties</param>
-        /// <param name="target">The target MetadataProperties</param>
-        partial void OnBeginCopyForPatch(MetadataProperties source, MetadataProperties target);
-
-        /// <summary>
-        /// Extensibility point: perform actions after data is copied
-        /// </summary>
-        /// <param name="source">The source MetadataProperties</param>
-        /// <param name="target">The target MetadataProperties</param>
-        partial void OnEndCopyForPatch(MetadataProperties source, MetadataProperties target);
-
-        /// <summary>
-        /// Copy the properties of a source MetadataProperties to a target MetadataProperties, using PATCH semantics
-        /// </summary>
-        /// <param name="source">The source MetadataProperties</param>
-        /// <param name="target">The target MetadataProperties</param>
-        public void CopyForPatch(MetadataProperties source, MetadataProperties target)
-        {
-            var serialization = source.SerializationInfo;
-            OnBeginCopyForPatch(source, target);
-            if (serialization.IsSerializedProperty(nameof(source.ProvisioningState)))
-                target.ProvisioningState = source.ProvisioningState;
-            OnEndCopyForPatch(source, target);
-        }
-
-        /// <summary>
-        /// Extensibility point: perform actions before data is copied
-        /// </summary>
-        /// <param name="source">The source MetadataProperties</param>
-        /// <param name="target">The target MetadataProperties</param>
-        partial void OnBeginCopyForPut(MetadataProperties source, MetadataProperties target);
-
-        /// <summary>
-        /// Extensibility point: perform actions after data is copied
-        /// </summary>
-        /// <param name="source">The source MetadataProperties</param>
-        /// <param name="target">The target MetadataProperties</param>
-        partial void OnEndCopyForPut(MetadataProperties source, MetadataProperties target);
-
-        /// <summary>
-        /// Copy the properties of a source MetadataProperties to a target MetadataProperties, using PUT semantics
-        /// </summary>
-        /// <param name="source">The source MetadataProperties</param>
-        /// <param name="target">The target MetadataProperties</param>
-        public void CopyForPut(MetadataProperties source, MetadataProperties target)
-        {
-            var serialization = source.SerializationInfo;
-            OnBeginCopyForPut(source, target);
-            target.ProvisioningState = source.ProvisioningState;
-            OnEndCopyForPut(source, target);
-        }
-    }
-}
