# testRP/src/typespec/generated/models/MoTestRPModelUpdateCopyHelper.cs
@@ -1,0 +1,74 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
+
+// <auto-generated />
+
+using System;
+using System.ComponentModel;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Microsoft.TypeSpec.ProviderHub.Controller;
+
+namespace Microsoft.MyResourceProvider.Service.Models
+{
+    /// <summary>
+    /// Helper for merging canonical MoTestRPModelUpdate models as part of a PUT or PATCH operation
+    /// </summary>
+    public partial class MoTestRPModelUpdateCopyHelper
+    {
+        /// <summary>
+        /// Extensibility point: perform actions before data is copied
+        /// </summary>
+        /// <param name="source">The source MoTestRPModelUpdate</param>
+        /// <param name="target">The target MoTestRPModelUpdate</param>
+        partial void OnBeginCopyForPatch(MoTestRPModelUpdate source, MoTestRPModelUpdate target);
+
+        /// <summary>
+        /// Extensibility point: perform actions after data is copied
+        /// </summary>
+        /// <param name="source">The source MoTestRPModelUpdate</param>
+        /// <param name="target">The target MoTestRPModelUpdate</param>
+        partial void OnEndCopyForPatch(MoTestRPModelUpdate source, MoTestRPModelUpdate target);
+
+        /// <summary>
+        /// Copy the properties of a source MoTestRPModelUpdate to a target MoTestRPModelUpdate, using PATCH semantics
+        /// </summary>
+        /// <param name="source">The source MoTestRPModelUpdate</param>
+        /// <param name="target">The target MoTestRPModelUpdate</param>
+        public void CopyForPatch(MoTestRPModelUpdate source, MoTestRPModelUpdate target)
+        {
+            var serialization = source.SerializationInfo;
+            OnBeginCopyForPatch(source, target);
+            if (serialization.IsSerializedProperty(nameof(source.Tags)))
+                target.Tags = source.Tags;
+            OnEndCopyForPatch(source, target);
+        }
+
+        /// <summary>
+        /// Extensibility point: perform actions before data is copied
+        /// </summary>
+        /// <param name="source">The source MoTestRPModelUpdate</param>
+        /// <param name="target">The target MoTestRPModelUpdate</param>
+        partial void OnBeginCopyForPut(MoTestRPModelUpdate source, MoTestRPModelUpdate target);
+
+        /// <summary>
+        /// Extensibility point: perform actions after data is copied
+        /// </summary>
+        /// <param name="source">The source MoTestRPModelUpdate</param>
+        /// <param name="target">The target MoTestRPModelUpdate</param>
+        partial void OnEndCopyForPut(MoTestRPModelUpdate source, MoTestRPModelUpdate target);
+
+        /// <summary>
+        /// Copy the properties of a source MoTestRPModelUpdate to a target MoTestRPModelUpdate, using PUT semantics
+        /// </summary>
+        /// <param name="source">The source MoTestRPModelUpdate</param>
+        /// <param name="target">The target MoTestRPModelUpdate</param>
+        public void CopyForPut(MoTestRPModelUpdate source, MoTestRPModelUpdate target)
+        {
+            var serialization = source.SerializationInfo;
+            OnBeginCopyForPut(source, target);
+            target.Tags = source.Tags;
+            OnEndCopyForPut(source, target);
+        }
+    }
+}
